--- a/tcl/Makefile.fpgamake.common
+++ b/tcl/Makefile.fpgamake.common
@@ -17,6 +17,7 @@ Synth/$1/$1-synth.dcp: $($1_PATH)
 	@echo FPGAMAKE $(MODULE) synth check
 	$(Q)mkdir -p Synth/$(MODULE)
 	$(Q)MODULE=$(MODULE) \
+	    HEADERFILES="$($(MODULE)_HEADERFILES)" \
 	    VFILES="$($(MODULE)_VFILES) $(foreach item,$($(MODULE)_STUBS), Synth/stubs/$(item))" \
 	    IP="$($(MODULE)_IP)" \
 	    SUBINST="$($(MODULE)_SUBINST)" \
