add --tcl command line option for user tcl scripts

--- a/tcl/Makefile.fpgamake.common
+++ b/tcl/Makefile.fpgamake.common
@@ -23,6 +23,7 @@ Synth/$1/$1-synth.dcp: $($1_PATH)
 	    VHDL_LIBRARIES="$($(MODULE)_VHDL_LIBRARIES)" \
 	    IP="$($(MODULE)_IP)" \
 	    SUBINST="$($(MODULE)_SUBINST)" \
+	    USER_TCL_SCRIPT="$($(MODULE)_USER_TCL_SCRIPT)" \
             FPGAMAKE_PARTNAME=$(FPGAMAKE_PARTNAME) \
             FPGAMAKE_BOARDNAME=$(FPGAMAKE_BOARDNAME) \
 	    BUILDCACHE_CACHEDIR="$(CACHEDIR)/Synth/$(MODULE)" \
