--- a/tcl/Makefile.fpgamake.common
+++ b/tcl/Makefile.fpgamake.common
@@ -14,7 +14,7 @@ define SYNTH_RULE
 SYNTH_NETLISTS += Synth/$1/$1-synth.dcp
 Synth/$1/$1-synth.dcp: $($1_PATH)
 	$(Q)$(eval MODULE=$1)
-	@echo FPGAMAKE $(MODULE) synth
+	@echo fpgamake.mk $@
 	$(Q)mkdir -p Synth/$(MODULE)
 	$(Q)MODULE=$(MODULE) \
 	    HEADERFILES="$($(MODULE)_HEADERFILES)" \
@@ -35,7 +35,7 @@ define IMPL_RULE
 Impl/$1/$1-post-route.dcp: Synth/$2/$2-synth.dcp $($2_NETLISTS) Impl/oocxdc.timestamp $(foreach item,$($(INST)_OOCXDC), Impl/$(INST)/$(item))
 	$(Q)$(eval MODULE=$2)
 	$(Q)$(eval INST=$1)
-	@echo FPGAMAKE $(INST) post-place
+	@echo fpgamake.mk $@
 	$(Q)MODULE=$(MODULE) INST=$(INST) \
 	    XDC="$($(INST)_XDC) $(foreach item,$($(INST)_OOCXDC), Impl/$(INST)/$(item))" \
 	    MODULE_NETLISTS="$($(INST)_NETLISTS)" \
@@ -50,7 +50,7 @@ SYNTH_NETLISTS += Impl/TopDown/$1-post-place.dcp
 Impl/TopDown/$1-post-place.dcp: $(FLOORPLAN) $(TopDown_NETLISTS) Synth/$2/$2-synth.dcp
 	$(Q)$(eval MODULE=$2)
 	$(Q)$(eval INST=$1)
-	@echo FPGAMAKE $(INST) topdown
+	@echo fpgamake.mk $@
 	$(Q)mkdir -p Impl/TopDown/
 	$(Q) MODULE=$(MODULE) INST=$(INST) \
 	     SUBINST="$(TopDown_SUBINST)" \
