--- a/tcl/Makefile.fpgamake.common
+++ b/tcl/Makefile.fpgamake.common
@@ -27,6 +27,7 @@ Synth/$1/$1-synth.dcp: $($1_PATH)
             FPGAMAKE_PARTNAME=$(FPGAMAKE_PARTNAME) \
             FPGAMAKE_BOARDNAME=$(FPGAMAKE_BOARDNAME) \
             FPGAMAKE_TOPMODULE=$(FPGAMAKE_TOPMODULE) \
+	    VERILOG_DEFINES=$(VERILOG_DEFINES) \
 	    BUILDCACHE_CACHEDIR="$(CACHEDIR)/Synth/$(MODULE)" \
 	    BUILDCACHE_OUTPUTDIR="Synth/$(MODULE)" \
 	    $(BUILDCACHE) vivado -notrace -mode batch -source $(TCLDIR)/synth.tcl
