fix call to $(realpath )

--- a/examples/uart_kc705/Makefile
+++ b/examples/uart_kc705/Makefile
@@ -8,7 +8,7 @@ PSEARCH ?= :+
 
 all: synth
 
-BLD    = $(realpath ./kc705)
+BLD    = $(realpath .)/kc705
 v_dir ?= ${BLD}/source
 bo_dir?= ${BLD}/bo
 i_dir ?= ${BLD}/info
