--- a/tcl/Makefile.fpgamake.common
+++ b/tcl/Makefile.fpgamake.common
@@ -103,7 +103,7 @@ Synth/$1/$1-map.dcp: $($1_PATH)
 	    VERILOG_DEFINES=$(VERILOG_DEFINES) \
 	    BUILDCACHE_CACHEDIR="$(CACHEDIR)/Synth/$(MODULE)" \
 	    BUILDCACHE_OUTPUTDIR="Synth/$(MODULE)" \
-	    $(BUILDCACHE) quartus_sh -t $(TCLDIR)/alt_map.tcl
+	    $(BUILDCACHE) quartus_sh -t $(TCLDIR)/altera_map.tcl
 endef
 
 # altera fit
@@ -124,7 +124,7 @@ Impl/Fit/$1-fit.dcp: $(FLOORPLAN) $(Fit_NETLISTS) Synth/$2/$2-map.dcp
 	     BUILDCACHE_CACHEDIR="$(CACHEDIR)/Impl/Fit" \
 	     BUILDCACHE_OUTPUTDIR="Impl/Fit" \
 	     REPORT_NWORST_TIMING_PATHS="$(REPORT_NWORST_TIMING_PATHS)" \
-	     $(BUILDCACHE) quartus_sh -t $(TCLDIR)/alt_fit.tcl
+	     $(BUILDCACHE) quartus_sh -t $(TCLDIR)/altera_fit.tcl
 
 $3: Impl/Fit/$1-fit.dcp
 	$(Q)echo "copy bitfile if needed"
