moved example bluespec source to bsv dir

--- a/examples/uart_kc705/Makefile
+++ b/examples/uart_kc705/Makefile
@@ -1,7 +1,6 @@
 FPGAMAKEDIR?=$(realpath ../..)
-sim_top= DutTop.bsv
-bsv_files= ${sim_top} ${sim_rest}
-v_rules = ${bsv_files:%.bsv=mk%V}
+bsv_files= bsv/DutTop.bsv
+v_rules = ${bsv_files:bsv/%.bsv=verilog/mk%.v}
 
 special_compile_flags := -reset-prefix RST_P -D BSV_POSITIVE_RESET
 PSEARCH ?= :+
@@ -9,14 +8,15 @@ PSEARCH ?= :+
 all: synth
 
 BLD    = $(realpath .)/kc705
-v_dir ?= ${BLD}/source
+v_dir ?= verilog
 bo_dir?= ${BLD}/bo
 i_dir ?= ${BLD}/info
 
 # Transformation Rules
-mk%V: %.bsv
+verilog/mk%.v: bsv/%.bsv
 	@mkdir -p ${BLD} ${v_dir} ${bo_dir} ${i_dir}
 	/usr/bin/time bsc -u -verilog -elab ${special_compile_flags} \
+	-p +:bsv \
 	-bdir ${bo_dir} -vdir ${v_dir} -info-dir ${i_dir} -p ${PSEARCH} -no-show-method-conf \
 	-show-schedule -show-compiles -aggressive-conditions -keep-fires -no-inline-rwire   \
 	-remove-dollar -show-range-conflict -scheduler-effort 500 $<
@@ -32,7 +32,7 @@ ${BLD}/fpgamake.mk: synth
 	--board=kc705 --part='xc7k325tffg900-2' -b mkDutTop.bit \
 	-o ${BLD}/fpgamake.mk -t mkDutTop \
         -D BSV_POSITIVE_RESET=1 \
-	--floorplan= --constraint=${PWD}/uart_led.xdc ${v_dir} ${BLUESPECDIR}/Verilog
+	--floorplan= --constraint=${PWD}/uart_led.xdc $(realpath ${v_dir}) ${BLUESPECDIR}/Verilog
 
 build: ${BLD}/fpgamake.mk 
 	cd ${BLD} && make -f fpgamake.mk
