--- a/tcl/Makefile.fpgamake.common
+++ b/tcl/Makefile.fpgamake.common
@@ -38,7 +38,7 @@ endef
 
 define TOP_RULE
 IMPL_NETLISTS += Impl/TopDown/$1-post-place.dcp
-Impl/TopDown/$1-post-place.dcp: $(FLOORPLAN) $(TopDown_NETLISTS) Synth/$2/$2-synth.dcp
+Impl/TopDown/$1-post-place.dcp: $(FLOORPLAN) $(TopDown_NETLISTS) $(SYNTH_NETLISTS)
 	$(Q)$(eval MODULE=$2)
 	$(Q)$(eval INST=$1)
 	@echo fpgamake.mk Impl/TopDown/$1-post-place.dcp
@@ -48,12 +48,13 @@ Impl/TopDown/$1-post-place.dcp: $(FLOORPLAN) $(TopDown_NETLISTS) Synth/$2/$2-syn
 	     MODULE_NETLISTS="$(TopDown_NETLISTS)" \
 	     RECONFIG_NETLISTS="$(TopDown_RECONFIG)" \
 	     XDC="$(TopDown_XDC)" \
+	     PRTOP="$(TopDown_PRTOP)" \
 	     FLOORPLAN="$(FLOORPLAN)" \
 	     BITFILE=Impl/TopDown/mkTop.bit \
 	     BUILDCACHE_CACHEDIR="$(CACHEDIR)/Impl/TopDown" \
 	     BUILDCACHE_OUTPUTDIR="Impl/TopDown" \
 	     REPORT_NWORST_TIMING_PATHS="$(REPORT_NWORST_TIMING_PATHS)" \
-	     $(BUILDCACHE) vivado -notrace -mode batch -source $(TCLDIR)/topdown.tcl
+	     $(BUILDCACHE) vivado -notrace -mode batch -source $(TCLDIR)/$5
 
 $3: Impl/TopDown/$1-post-place.dcp
 	$(Q)cp -v Impl/TopDown/mkTop.bit $4.bit
@@ -67,41 +68,6 @@ Impl/oocxdc.timestamp: Impl/TopDown/$1-post-place.dcp
 	touch Impl/oocxdc.timestamp
 
 $(foreach inst, $(TopDown_SUBINST), Impl/$(inst)/$(inst)-ooc.xdc Impl/$(inst)/$(inst)-ooc-budget.xdc Impl/$(inst)/$(inst)-ooc-clocks.xdc): Impl/oocxdc.timestamp
-
-endef
-
-define RETOP_RULE
-IMPL_NETLISTS += Impl/TopDown/$1-post-place.dcp
-Impl/ReTop/$1-post-place.dcp: $(FLOORPLAN) $(ReTop_NETLISTS) Synth/$2/$2-synth.dcp
-	$(Q)$(eval MODULE=$2)
-	$(Q)$(eval INST=$1)
-	@echo fpgamake.mk Impl/ReTop/$1-post-place.dcp
-	$(Q)mkdir -p Impl/ReTop/
-	$(Q) MODULE=$(MODULE) INST=$(INST) \
-	     SUBINST="$(ReTop_SUBINST)" \
-	     MODULE_NETLISTS="$(ReTop_NETLISTS)" \
-	     RECONFIG_NETLISTS="$(ReTop_RECONFIG)" \
-	     XDC="$(ReTop_XDC)" \
-	     PRTOP="$(ReTop_PRTOP)" \
-	     FLOORPLAN="$(FLOORPLAN)" \
-	     BITFILE=Impl/ReTop/mkTop.bit \
-	     BUILDCACHE_CACHEDIR="$(CACHEDIR)/Impl/ReTop" \
-	     BUILDCACHE_OUTPUTDIR="Impl/ReTop" \
-	     REPORT_NWORST_TIMING_PATHS="$(REPORT_NWORST_TIMING_PATHS)" \
-	     $(BUILDCACHE) vivado -notrace -mode batch -source $(TCLDIR)/retopdown.tcl
-
-$3: Impl/ReTop/$1-post-place.dcp
-	$(Q)cp -v Impl/ReTop/mkTop.bit $4.bit
-	$(Q)cp -v Impl/ReTop/mkTop.bin $4.bin
-
-Impl/oocxdc.timestamp: Impl/ReTop/$1-post-place.dcp
-	@echo fpgamake.mk Impl/oocxdc.timestamp
-	INST=$1 MODULE=$2 \
-	SUBINST="$(ReTop_SUBINST)" \
-	$(BUILDCACHE) vivado -notrace -mode batch -source $(TCLDIR)/write-ooc-xdc.tcl
-	touch Impl/oocxdc.timestamp
-
-$(foreach inst, $(ReTop_SUBINST), Impl/$(inst)/$(inst)-ooc.xdc Impl/$(inst)/$(inst)-ooc-budget.xdc Impl/$(inst)/$(inst)-ooc-clocks.xdc): Impl/oocxdc.timestamp
 
 endef
 
