--- a/examples/uart_de5/Makefile
+++ b/examples/uart_de5/Makefile
@@ -31,8 +31,9 @@ ${BLD}/fpgamake.mk: synth
 	cd ${BLD} && $(FPGAMAKEDIR)/fpgamake \
 	--board=de5 --part='5SGXEA7N2F45C2' -b mkDutTop.sof \
 	-o ${BLD}/fpgamake.mk -t mkDutTop \
-    -D BSV_POSITIVE_RESET=1 \
-	--floorplan= --constraint=${PWD}/uart_led.sdc --tcl=${PWD}/uart_led.qsf \
+	-D BSV_POSITIVE_RESET=1 \
+	-s mkUartRx \
+	--floorplan= --implconstraint=${PWD}/uart_led.sdc --tcl=${PWD}/uart_led.qsf \
 	${v_dir} ${BLUESPECDIR}/Verilog
 
 build: ${BLD}/fpgamake.mk
